# ZPell

./: .gitignore  CMakeLists.txt  README.md
bindings/: ZPell.i  generate-bindings.sh
docs/: CMakeLists.txt  Doxyfile.in  frontpage.md
docs/manual/: 01-introduction.md  02-configuration.md  03-api-reference.md  04-module-development.md  06-wordlist-loading.md  07-dotfile.md  08-rpc.md  09-ipc.md  0advanced-topcs.md
include/: bktree.h  cache.h  config.h  distance.h  ipc.h  lua-bindings.h  module-loader.h  pattern.h  rpc.h  wordlist.h  zpell-api.h  zpell-module.h
src/: CMakeLists.txt  bktree.cpp  cache.cpp  config.cpp  distance.cpp  ipc.cpp  lua-bindings.cpp  module-loader.cpp  pattern.cpp  rpc.cpp  wordlist.cpp  zpell-api.cpp  zpell-cli.cpp  zpell-module.cpp
tests/: CMakeLists.txt  test_bktree.cpp  test_config.cpp  test_distance.cpp  test_pattern.cpp  test_wordlist.cpp
